  05 Apr 2018; Andrew John Hughes <gnu_andrew@member.fsf.org>
  watchman-4.9.0.ebuild:
  dev-util/watchman: Add slot to OpenSSL dependency.

*watchman-4.9.0 (05 Apr 2018)

  05 Apr 2018; Andrew John Hughes <gnu_andrew@member.fsf.org> +metadata.xml,
  +watchman-4.9.0.ebuild:
  dev-util/watchman: Add ebuild for Watchman