@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE pkgmetadata SYSTEM "http://www.gentoo.org/dtd/metadata.dtd">
 <pkgmetadata>
-	<maintainer type="person">
-		<email>gnu_andrew@member.fsf.org</email>
-		<name>Andrew Hughes</name>
-	</maintainer>
-	<use>
-	  <flag name="pcre">Enable pcre support</flag>
-	  <flag name="python">Enable Python support</flag>
-	</use>
+        <maintainer type="person">
+                <email>gnu_andrew@member.fsf.org</email>
+                <name>Andrew Hughes</name>
+        </maintainer>
+        <use>
+          <flag name="pcre">Enable pcre support</flag>
+          <flag name="python">Enable Python support</flag>
+        </use>
 </pkgmetadata>
